--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.92MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-257.1KB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 31097, type: trojan, password: 644c9b90-3bf9-4d95-a837-ce83c31ed839, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-687.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-260.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-234.3KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-414.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-577.2KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-646.1KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-365.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.91MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-497.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 捷克-310.5KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
   - {name: 🇨🇳 中国-201.1KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇨🇳 中国-562.2KB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 42167, type: trojan, password: 644c9b90-3bf9-4d95-a837-ce83c31ed839, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-317.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-689.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-687.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-577.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-646.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-365.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
       - 捷克-310.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-317.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-689.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-687.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-577.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-646.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-365.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
       - 捷克-310.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-317.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-689.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-687.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-577.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-646.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-365.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
       - 捷克-310.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-317.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-689.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-687.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-577.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-646.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-365.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
       - 捷克-310.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-317.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-689.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-687.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-577.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-646.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-365.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
       - 捷克-310.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-317.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-689.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-687.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-577.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-646.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-365.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
       - 捷克-310.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-317.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-689.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-687.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-577.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-646.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-365.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
       - 捷克-310.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-317.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-689.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
