--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-317.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 捷克-310.5KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇨🇳 中国-228.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-600.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-213.1KB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
-  - {name: 🇺🇸 美国-817.8KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-533.9KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.11MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-5.36MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-257.1KB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 31097, type: trojan, password: 644c9b90-3bf9-4d95-a837-ce83c31ed839, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-228.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-490.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.24MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇺🇸 美国-952.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-538.9KB/s(Youtube:不良林), server: cd.rutracker-cn.com, port: 443, type: trojan, password: ukMzuFSmIXDvgW0h, sni: cd.rutracker-cn.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.95MB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12222, type: vmess, uuid: eddbceb6-a19e-324a-86ed-ecf4fe041656, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-317.8KB/s(Youtube:不良林)
-      - 捷克-310.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-600.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-817.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-533.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-490.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-952.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-317.8KB/s(Youtube:不良林)
-      - 捷克-310.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-600.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-817.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-533.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-490.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-952.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-317.8KB/s(Youtube:不良林)
-      - 捷克-310.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-600.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-817.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-533.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-490.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-952.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.11MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-317.8KB/s(Youtube:不良林)
-      - 捷克-310.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-600.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-817.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-533.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-490.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-952.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-317.8KB/s(Youtube:不良林)
-      - 捷克-310.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-600.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-817.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-533.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-490.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-952.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-317.8KB/s(Youtube:不良林)
-      - 捷克-310.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-600.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-817.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-533.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-490.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-952.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-317.8KB/s(Youtube:不良林)
-      - 捷克-310.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-600.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-817.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-533.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-490.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-952.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
