--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.39MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-4.66MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-453.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.00MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-221.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 波兰-1.89MB/s(Youtube:不良林), server: 217.30.10.65, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 捷克-422.2KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇨🇳 中国-1.08MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.37MB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇨🇳 中国-1.23MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
+  - {name: 🇳🇱 荷兰-1.68MB/s(Youtube:不良林), server: 213.183.59.206, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 保加利亚-475.2KB/s(Youtube:不良林), server: 213.183.63.218, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇫🇷 法国-959.7KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 保加利亚-1.44MB/s(Youtube:不良林), server: 213.183.63.218, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇳🇱 荷兰-997.4KB/s(Youtube:不良林), server: 213.183.59.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 波兰-1.48MB/s(Youtube:不良林), server: 217.30.10.63, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 波兰-1.61MB/s(Youtube:不良林), server: 217.30.10.63, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 波兰-448.9KB/s(Youtube:不良林), server: 217.30.10.63, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 波兰-490.6KB/s(Youtube:不良林), server: 217.30.10.63, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 波兰-1.51MB/s(Youtube:不良林), server: 217.30.10.63, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.4KB/s(Youtube:不良林)
-      - 波兰-1.89MB/s(Youtube:不良林)
-      - 捷克-422.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.68MB/s(Youtube:不良林)
+      - 保加利亚-475.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-959.7KB/s(Youtube:不良林)
+      - 保加利亚-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
+      - 波兰-1.48MB/s(Youtube:不良林)
+      - 波兰-1.61MB/s(Youtube:不良林)
+      - 波兰-448.9KB/s(Youtube:不良林)
+      - 波兰-490.6KB/s(Youtube:不良林)
+      - 波兰-1.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.4KB/s(Youtube:不良林)
-      - 波兰-1.89MB/s(Youtube:不良林)
-      - 捷克-422.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.68MB/s(Youtube:不良林)
+      - 保加利亚-475.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-959.7KB/s(Youtube:不良林)
+      - 保加利亚-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
+      - 波兰-1.48MB/s(Youtube:不良林)
+      - 波兰-1.61MB/s(Youtube:不良林)
+      - 波兰-448.9KB/s(Youtube:不良林)
+      - 波兰-490.6KB/s(Youtube:不良林)
+      - 波兰-1.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.4KB/s(Youtube:不良林)
-      - 波兰-1.89MB/s(Youtube:不良林)
-      - 捷克-422.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.68MB/s(Youtube:不良林)
+      - 保加利亚-475.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-959.7KB/s(Youtube:不良林)
+      - 保加利亚-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
+      - 波兰-1.48MB/s(Youtube:不良林)
+      - 波兰-1.61MB/s(Youtube:不良林)
+      - 波兰-448.9KB/s(Youtube:不良林)
+      - 波兰-490.6KB/s(Youtube:不良林)
+      - 波兰-1.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.4KB/s(Youtube:不良林)
-      - 波兰-1.89MB/s(Youtube:不良林)
-      - 捷克-422.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.68MB/s(Youtube:不良林)
+      - 保加利亚-475.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-959.7KB/s(Youtube:不良林)
+      - 保加利亚-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
+      - 波兰-1.48MB/s(Youtube:不良林)
+      - 波兰-1.61MB/s(Youtube:不良林)
+      - 波兰-448.9KB/s(Youtube:不良林)
+      - 波兰-490.6KB/s(Youtube:不良林)
+      - 波兰-1.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.4KB/s(Youtube:不良林)
-      - 波兰-1.89MB/s(Youtube:不良林)
-      - 捷克-422.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.68MB/s(Youtube:不良林)
+      - 保加利亚-475.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-959.7KB/s(Youtube:不良林)
+      - 保加利亚-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
+      - 波兰-1.48MB/s(Youtube:不良林)
+      - 波兰-1.61MB/s(Youtube:不良林)
+      - 波兰-448.9KB/s(Youtube:不良林)
+      - 波兰-490.6KB/s(Youtube:不良林)
+      - 波兰-1.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.4KB/s(Youtube:不良林)
-      - 波兰-1.89MB/s(Youtube:不良林)
-      - 捷克-422.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.68MB/s(Youtube:不良林)
+      - 保加利亚-475.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-959.7KB/s(Youtube:不良林)
+      - 保加利亚-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
+      - 波兰-1.48MB/s(Youtube:不良林)
+      - 波兰-1.61MB/s(Youtube:不良林)
+      - 波兰-448.9KB/s(Youtube:不良林)
+      - 波兰-490.6KB/s(Youtube:不良林)
+      - 波兰-1.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.4KB/s(Youtube:不良林)
-      - 波兰-1.89MB/s(Youtube:不良林)
-      - 捷克-422.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.68MB/s(Youtube:不良林)
+      - 保加利亚-475.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-959.7KB/s(Youtube:不良林)
+      - 保加利亚-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
+      - 波兰-1.48MB/s(Youtube:不良林)
+      - 波兰-1.61MB/s(Youtube:不良林)
+      - 波兰-448.9KB/s(Youtube:不良林)
+      - 波兰-490.6KB/s(Youtube:不良林)
+      - 波兰-1.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
